--- a/blog-cards/style.scss
+++ b/blog-cards/style.scss
@@ -26,9 +26,15 @@ body{
     }
     ul{
         li{
+            position: relative;
             border-radius: 30px;
             margin: 0 25px;
             background: #FFF;
+            transition: 300ms all;
+            &:hover{
+                top: -10px;
+                box-shadow: 0px 34px 36px -14px #E9ECF9;;
+            }
             img{
                 width: 323px; 
                 height: 213px;
@@ -88,6 +94,7 @@ body{
                         margin-right: 10px;
                     }
                 }
+
             }
 
         }
