--- a/linkedin/style.css
+++ b/linkedin/style.css
@@ -11,9 +11,217 @@
 
 html, body {
   height: 100%;
+  background: #F5F6F8;
+}
+
+nav {
+  background: #fff;
 }
 
 .frame {
   width: 1140px;
   margin: 0 auto;
+  display: flex;
+  align-items: center;
+  padding: 12px 0;
+}
+.frame .search {
+  position: relative;
+  margin-left: 18px;
+}
+.frame .search i {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 32px;
+  width: 44px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.frame .search input {
+  height: 32px;
+  width: 312px;
+  background: rgba(222, 222, 222, 0.32);
+  border-radius: 4px;
+  border: none;
+  font-size: 14px;
+  padding: 0 15px 0 44px;
+}
+.frame .search input::-moz-placeholder {
+  color: #AAAAAA;
+}
+.frame .search input::placeholder {
+  color: #AAAAAA;
+}
+.frame .menu {
+  margin: 0 auto;
+}
+.frame .menu ul {
+  display: flex;
+}
+.frame .menu ul li {
+  margin: 0 16px;
+}
+.frame .user {
+  display: flex;
+  align-items: center;
+}
+.frame .user .user-info {
+  display: flex;
+  flex-direction: column;
+  text-align: right;
+  margin-right: 6px;
+}
+.frame .user .user-info h3 {
+  color: #17272F;
+  font-size: 15px;
+  font-weight: 400;
+}
+.frame .user .user-info p {
+  color: #31B057;
+  font-size: 12px;
+  font-weight: 400;
+}
+
+main {
+  margin-top: 16px;
+}
+main .container {
+  width: 1140px;
+  margin: auto;
+  display: flex;
+}
+main .container .content {
+  margin: 0 30px;
+}
+main .container .sidebar {
+  width: 270px;
+  min-width: 270px;
+}
+main .container .sidebar .profile-widget {
+  margin-bottom: 16px;
+  height: 225px;
+  border-radius: 6px;
+  background: #fff;
+  text-align: center;
+}
+main .container .sidebar .profile-widget .user {
+  margin-bottom: 16px;
+  padding-bottom: 16px;
+  border-bottom: solid 1px #EDF0F5;
+  display: inline-block;
+}
+main .container .sidebar .profile-widget .user .cover {
+  margin-top: 8px;
+}
+main .container .sidebar .profile-widget .user .avatar {
+  text-align: center;
+}
+main .container .sidebar .profile-widget .user .avatar img {
+  width: 52px;
+  height: 52px;
+  margin-top: -26px;
+  border: 2px solid #fff;
+  border-radius: 50%;
+}
+main .container .sidebar .profile-widget .user h3 {
+  color: #17272F;
+  font-size: 16px;
+  font-weight: 500;
+  margin-top: 8px;
+  margin-bottom: 4px;
+}
+main .container .sidebar .profile-widget .user p {
+  color: #AAA;
+  font-size: 14px;
+  font-weight: 400;
+}
+main .container .sidebar .profile-widget .views .view-stats {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 15px;
+  color: #17272F;
+  font-size: 14px;
+  font-weight: 400;
+}
+main .container .sidebar .profile-widget .views .view-stats:not(:last-child) {
+  margin-bottom: 16px;
+}
+main .container .sidebar .profile-widget .views .view-stats span {
+  color: #069;
+  font-size: 14px;
+  font-weight: 500;
+}
+main .container .sidebar .trends-widget {
+  height: 301px;
+  background: #fff;
+  border-radius: 6px;
+  margin-bottom: 16px;
+}
+main .container .sidebar .trends-widget .trend-container {
+  padding: 15px;
+}
+main .container .sidebar .trends-widget .trend-container h2 {
+  color: #17272F;
+  font-size: 14px;
+  font-weight: 500;
+}
+main .container .sidebar .trends-widget .trend-container ul li {
+  color: #069;
+  font-size: 12px;
+  font-weight: 500;
+  margin-bottom: 8px;
+}
+main .container .sidebar .trends-widget .trend-container ul li img {
+  margin-right: 8px;
+}
+main .container .sidebar .trends-widget .newest {
+  margin-bottom: 36px;
+}
+main .container .sidebar .trends-widget .newest span {
+  border-bottom: 1px solid #EDF0F5;
+  display: block;
+  padding-bottom: 8px;
+  margin-bottom: 12px;
+}
+main .container .sidebar .trends-widget .group .group-title {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid #EDF0F5;
+  padding-bottom: 8px;
+  margin-bottom: 12px;
+}
+main .container .sidebar .trends-widget .group .group-title .dropdown a {
+  color: #31B057;
+  font-size: 14px;
+  font-weight: 400;
+}
+main .container .sidebar .add-event-widget {
+  width: 270px;
+  background: #fff;
+  border-radius: 6px;
+  margin-bottom: 16px;
+}
+main .container .sidebar .add-event-widget h2 {
+  color: #17272F;
+  font-size: 14px;
+  font-weight: 500;
+  padding: 17px;
+  display: flex;
+  justify-content: space-between;
+}
+main .container .sidebar .find-more-widget {
+  background: #fff;
+  border-radius: 6px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 270px;
+}
+main .container .sidebar .find-more-widget h2 {
+  color: #069;
+  font-size: 14px;
+  font-weight: 500;
+  padding: 20px 0;
 }/*# sourceMappingURL=style.css.map */
