--- a/linkedin/style.scss
+++ b/linkedin/style.scss
@@ -13,10 +13,226 @@
 
 html, body{
     height: 100%;
+    background: #F5F6F8;
+}
+
+nav{
+    background: #fff;
 }
 
 
 .frame{
     width: 1140px;
     margin: 0 auto;
+    display: flex;
+    align-items: center;
+    padding: 12px 0;
+    .search{
+        position: relative;
+        margin-left: 18px;
+        i{
+            position: absolute;
+            top: 0;
+            left: 0;
+            height: 32px;
+            width: 44px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        input{
+            height: 32px;
+            width: 312px;
+            background: rgba(222, 222, 222, 0.32);
+            border-radius: 4px;
+            border: none;
+            font-size: 14px;
+            padding: 0 15px 0 44px;
+            &::placeholder{
+                color: #AAAAAA;
+            }
+        }
+    }
+    
+    .menu{
+        margin: 0 auto;
+        ul{
+            display: flex;
+            li{
+                margin: 0 16px;
+            }
+        }
+    }
+    .user{
+        display: flex;
+        align-items: center;
+        .user-info{
+            display: flex;
+            flex-direction: column;
+            text-align: right;
+            margin-right: 6px;
+            h3{
+                color: #17272F;
+                font-size: 15px;
+                font-weight: 400;
+            }
+            p{
+                color: #31B057;
+                font-size: 12px;
+                font-weight: 400;
+            }
+        }
+    }
+
+}
+
+main{
+    margin-top: 16px;
+    .container{
+        width: 1140px;
+        margin: auto;
+        display: flex;
+        .content{
+            margin: 0 30px;
+        }
+        .sidebar{
+            width: 270px;
+            min-width: 270px;
+            .profile-widget{
+                margin-bottom: 16px;
+                height: 225px;
+                border-radius: 6px;
+                background: #fff;
+                text-align: center;
+                .user{
+                    margin-bottom: 16px;
+                    padding-bottom: 16px;
+                    border-bottom: solid 1px #EDF0F5;
+                    display: inline-block;
+                    .cover{
+                        margin-top: 8px;
+                    }
+                    .avatar{
+                        text-align: center;
+                        img{
+                            width: 52px;
+                            height: 52px;
+                            margin-top: -26px;
+                            border: 2px solid #fff;
+                            border-radius: 50%;
+                        }
+                    }
+                    h3{
+                        color: #17272F;
+                        font-size: 16px;
+                        font-weight: 500;
+                        margin-top: 8px;
+                        margin-bottom: 4px;
+                    }
+                    p{
+                        color: #AAA;
+                        font-size: 14px;
+                        font-weight: 400;
+                    }
+                }
+                .views{
+                    .view-stats{
+                        display: flex;
+                        justify-content: space-between;
+                        margin: 0 15px;
+                        &:not(:last-child){
+                            margin-bottom: 16px;
+                        }
+                        color: #17272F;
+                        font-size: 14px;
+                        font-weight: 400;
+                        span{
+                            color: #069;
+                            font-size: 14px;
+                            font-weight: 500;
+                        }
+                    }
+                }
+            }
+            .trends-widget{
+                height: 301px;
+                background: #fff;
+                border-radius: 6px;
+                margin-bottom: 16px;
+                .trend-container{
+                    padding: 15px;
+                    h2{
+                        color: #17272F;
+                        font-size: 14px;
+                        font-weight: 500;
+                    }
+                    ul{
+                        li{
+                            color: #069;
+                            font-size: 12px;
+                            font-weight: 500;
+                            margin-bottom: 8px;
+                            img{
+                                margin-right: 8px;
+                            }
+                        }
+                    }
+                }
+                .newest{
+                    margin-bottom: 36px;
+                    span{
+                        border-bottom: 1px solid #EDF0F5;
+                        display: block;
+                        padding-bottom: 8px;
+                        margin-bottom: 12px;
+                    }
+                }
+                .group{
+                    .group-title{
+                        display: flex;
+                        justify-content: space-between;
+                        border-bottom: 1px solid #EDF0F5;
+                        padding-bottom: 8px;
+                        margin-bottom: 12px;
+                        .dropdown{
+                            a{
+                                color: #31B057;
+                                font-size: 14px;
+                                font-weight: 400;
+                            }
+                        }
+                    }
+                }
+            }
+            .add-event-widget{
+                width: 270px;
+                background: #fff;
+                border-radius: 6px;
+                margin-bottom: 16px;
+                h2{
+                    color: #17272F;
+                    font-size: 14px;
+                    font-weight: 500;
+                    padding: 17px;
+                    display: flex;
+                    justify-content: space-between;
+                }
+            }
+            .find-more-widget{
+                background: #fff;
+                border-radius: 6px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                width: 270px;
+                h2{
+                    color: #069;
+                    font-size: 14px;
+                    font-weight: 500;
+                    padding: 20px 0;
+                }
+            }
+        }
+        .sidebar:last-child{}
+    }
 }
